--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </ul>
     <p>Now run the following command:</p>
     <div class="input-group">
-      <input style="width:100%;" class="form-control input-block" type="text" placeholder="Full-width input" aria-label="Full-width input"  value="Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://bioblaze.github.io/TrovoBot/install.ps1'))" aria-label="Install with powershell.exe command" readonly="">
+      <input style="width:100%; display: flex;" class="form-control input-block" type="text" placeholder="Full-width input" aria-label="Full-width input"  value="Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://bioblaze.github.io/TrovoBot/install.ps1'))" aria-label="Install with powershell.exe command" readonly="">
     </div>
   </li>
   <li>Paste the copied text into your shell and press Enter.</li>
